--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ body {
 	width: 0;
 	border-width: 7px 0 0 10px;
 	border-style: solid;
-	border-color: #2196F3 transparent;
+	border-color: rgb(33, 243, 163) transparent;
 }
 
 /* ----------------------------
